Mais elementos pra home mobile

--- a/index.html
+++ b/index.html
@@ -90,6 +90,68 @@
             </div>
 
         </section>
+
+
+        <section class="eventos">
+        
+            <p class="titulo__lista">
+                Eventos
+            </p>
+
+            <div class="lista__eventos">
+                <div class="card__eventos shadow">
+                    <img src="img/incendio_01.jpg" alt="">
+                    <p class="titulo__evento">Incêndio em Poços de Caldas</p>
+                    <p class="descricao__evento">Contibua com o que puder para sanar os danos</p>
+                    <a href="#" class="botao__doacao">Doar</a>
+                </div>
+                <div class="card__eventos shadow">
+                    <img src="img/incendio_02.jpg" alt="">
+                    <p class="titulo__evento">Incêndio na Comunidade</p>
+                    <p class="descricao__evento">Faça uma doação agora e ajude as comunidades afetadas</p>
+                    <a href="#" class="botao__doacao">Doar</a>
+                </div>
+                <div class="card__eventos shadow">
+                    <img src="img/incendio_03.jpg" alt="">
+                    <p class="titulo__evento">Ajude o Cerrado</p>
+                    <p class="descricao__evento">Faça uma doação agora e ajude as comunidades afetadas</p>
+                    <a href="#" class="botao__doacao">Doar</a>
+                </div>
+                <div class="card__eventos shadow">
+                    <img src="img/incendio_04.jpg" alt="">
+                    <p class="titulo__evento">Apoie a natureza</p>
+                    <p class="descricao__evento">Faça uma doação agora e ajude as comunidades afetadas</p>
+                    <a href="#" class="botao__doacao">Doar</a>
+                </div>
+            </div>
+
+            <div class="mais__eventos botao__mais">
+                <a href="#">Mais eventos</a>
+            </div>
+        </section>
+
+        <section class="noticias">
+            <p class="titulo__lista ultimas__noticias">
+                Últimas notícias
+            </p>
+        
+            <div class="grid__noticias">
+                <div class="card__noticia shadow">
+                    <img src="img/enchente_01.jpg" alt="">
+                    <p class="titulo__noticia">Enchentes em São Paulo</p>
+                    <p class="data__publicacao__noticia">Publicado em 12/04/2023</p>
+                </div>
+                <div class="card__noticia shadow">
+                    <img src="img/seca_01.jpg" alt="">
+                    <p class="titulo__noticia">Seca no Nordeste</p>
+                    <p class="data__publicacao__noticia">Publicado em 11/04/2023</p>
+                </div>
+            </div>
+
+            <div class="mais__noticias botao__mais">
+                <a href="#">Mais notícias</a>
+            </div>
+        </section>
     </main>
 
 </body>
