Adicionado menu funcional no menu hamburguer

--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
             <label for="menu">
                 <span class="menu__hamburguer"></span>
             </label>
+            <ul class="lista-menu">
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Início</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Quem somos</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Notícias</a>
+                </li>
+                <li class="lista-menu__item">
+                    <a href="#" class="lista-menu__link">Contato</a>
+                </li>
+            </ul>
         </div>
 
         <div class="container__logo">
